<resources>
    <string name="app_name">DEMO-POS</string>

<string name="logo_description">logo description\n</string>
<string name="welcome_title">Welcome To CMG POS System\n</string>
<string name="welcome_subtitle">Tap the button below to start a new CNG sale transaction\n</string>
<string name="eco_friendly">eco friendly</string>
<string name="fixed_rate">fixed rate</string>
<string name="quick_service">quick service</string>
<string name="copyright">copyright\n</string>
<string name="privacy_policy">privacy policy\n</string>
<string name="terms_of_service">terms of services</string>
<string name="system_status">system status</string>
<string name="click_to_enter">CLICK TO ENTER</string>
<string name="riico_station">RIICO STATION</string>
<string name="recent_transactions">recent transaction</string>
<string name="auto_sales_transaction">AUTO SALES TRANSACTION</string>
<string name="manual_sales_transaction">MANUAL SALES TRANSACTION</string>
<string name="scanning_transactions">scanning transaction</string>
<string name="fetching_transactions">fetching transaction</string>
<string name="sales_kg">Sales kg</string>
<string name="enter_sales_kg">Enter sales kg</string>
<string name="station">Station</string>
<string name="manual_sales_title">manual sales title</string>
<string name="dispenser">Dispenser</string>
<string name="nozzle">Nozzle</string>
<string name="gas_rate">Gas Rate</string>
<string name="quantity">Quantity</string>
<string name="total_amount">Total Amount</string>
<string name="pay_with_phonepe">Proceed to Pay</string>
<string name="back_to_home">BACK TO HOME</string>
<string name="confirm_selection">CONFIRM SELECTION</string>
<string name="manual_transaction_sale_info">manual transaction sale info</string>
<string name="transaction_preview">transaction preview</string>
<string name="status_ready">status ready</string>
<string name="transaction_type_label">transaction type label</string>
<string name="manual_entry">manual entry</string>
<string name="order_id_label">order id label</string>
<string name="date_time_label">date time label</string>
<string name="dispenser_label">dispenser label</string>
<string name="nozzle_label">nozzle label</string>
<string name="fuel_type_label">fuel type label</string>
<string name="cng">cng</string>
<string name="quantity_kg_label">qunatity kg label</string>
<string name="price_per_kg_label">price per kg label</string>
<string name="total_amount_label">total amount label</string>
<string name="back">Back</string>
<string name="transaction_complete">transaction complete</string>
<string name="phonepe_transaction_id">phonepe trnasaction id</string>
<string name="payment_mode_label">payment mode label</string>
<string name="total_paid">total paid</string>
<string name="generate_pdf">generate pdf</string>
<string name="skip">skip</string>
<string name="print_customer_copy">print customer copy</string>
<string name="phonepe_payment">phonepe payment</string>
<string name="processing_payment">processing payment</string>
<string name="verifying_payment_status">verfyinng payment status</string>
<string name="checking_payment_status">checking payment status</string>
<string name="step_validate">step validate</string>
<string name="step_process">step process</string>
<string name="step_complete">step complete</string>
<string name="close">close</string>
<string name="secure">secure</string>
<string name="ssl_encryption">ssl encryption</string>
<string name="cancel">cancel</string>
<string name="success">success</string>
<string name="payment_successful">payment successful</string>
<string name="merchant_logo">merchant logo</string>
<string name="transaction_id">transaction id</string>
<string name="copy">copy</string>
<string name="upi_payment">upi payment</string>
<string name="enter_upi_id">enter upi id</string>
<string name="verify">verify</string>
<string name="verified">verified</string>
<string name="other_methods">other method</string>
<string name="debit_credit_card">debit credit card</string>
<string name="select">select</string>
<string name="net_banking">net banking</string>
<string name="powered_by">powered by</string>
<string name="view_breakup">view breakup</string>
<string name="timeout">timeout</string>
<string name="timeout_message">timeout message</string>
<string name="pay">pay</string>
<string name="payment_pending">payment pending</string>
<string name="accept_payment_request">accept payment request</string>
<string name="complete_payment_upi">complete payment upi</string>
<string name="manual_sales_entry">manual sales entry</string>
</resources>